--- a/vue-as/index.html
+++ b/vue-as/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="/static/js/plupload.full.min.js"></script>
+
     <title>vue</title>
 
   </head>
