--- a/vue-as/index.html
+++ b/vue-as/index.html
@@ -4,14 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" src="/static/js/plupload.full.min.js"></script>
-
+    <script type="text/javascript" src="/static/js/config.js"></script>
+    
     <title>vue</title>
-
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
-
   </body>
 </html>
