路由懒加载

--- a/vue-as/index.html
+++ b/vue-as/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" src="/static/js/plupload.full.min.js"></script>
     <script type="text/javascript" src="/static/js/config.js"></script>
-    
-    <title>vue</title>
+    <meta name="description" content="The best pocket anime community: enjoy tons of anime topics, pictures, cos, reviews and make friends any time and any where!" />
+    <meta name="keywords" content="anime community, manga community, pocket anime community, anime coummunity app, anime app, anime fandom, anime forum, anime, manga, iOS anime community app, Android anime community app, iPad anime community app" />
+    <title>Anime Sama- Pocket Anime Community</title>
   </head>
   <body>
     <div id="app"></div>
